# uvm

./: 404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: index.md
search/: search_index.json
tests/: test_uvm.py
uvm/: __main__.py  core.py  main.py  utils.py
uvm/commands/: build_command.py  code_command.py  major_command.py  minor_command.py  patch_command.py
