[tool.poetry]
name = "uvm"
version = "1.0.1"
description = "Unity Version Manager CLI implemented with Python and Typer"
authors = ["educup <hello@educup.io>"]
homepage = "https://github.com/educup/uvm"
repository = "https://github.com/educup/uvm"
documentation = "https://github.com/educup/uvm"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
uvm = "uvm.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"
black = "^21.4b0"
isort = "^5.7.0"
pytest-cov = "^2.10.1"
typer-cli = "^0.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
