[tool.poetry]
name = "uvm"
version = "1.0.2"
description = "Unity Version Manager CLI implemented with Python and Typer"
authors = ["educup <hello@educup.io>"]
homepage = "https://github.com/educup/uvm"
repository = "https://github.com/educup/uvm"
documentation = "https://github.com/educup/uvm"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
uvm = "uvm.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^21.4b0"
flake8 = "^3.9.1"
isort = "^5.8.0"
pytest-cov = "^2.11.1"
typer-cli = "^0.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
